# alx-low_level_programming

./: .11-print_to_98.c.swp  .3-print_remaining_days.c.swp  3-strcmp.c  7-leet.c  7-puts_half.c  CMakeLists.txt  README.md
0x00-hello_world/: .6-size.c.swp  4-puts.c  5-printf.c  6-size.c  README.md
0x01-variables_if_else_while/: 0-positive_or_negative.c  1-last_digit.c  100-print_comb3.c  101-print_comb4.c  2-print_alphabet.c  3-print_alphabets.c  4-print_alphabt.c  5-print_numbers.c  6-print_numberz.c  7-print_tebahpla.c  8-print_base16.c  9-print_comb.c  README.md
0x02-functions_nested_loops/: .0-putchar.c.swp  0-putchar.c  1-alphabet.c  10-add.c  11-print_to_98.c  2-print_alphabet_x10.c  3-islower.c  4-isalpha.c  5-sign.c  7-print_last_digit.c  9-times_table.c  README.md  main.h  print_alphabet_x10.c
0x03-debugging/: .0-main.c.swp  1-main.c  2-largest_number.c
0x05-pointers_arrays_strings/: 0-reset_to_98.c  1-swap.c  2-strlen.c  3-puts.c  4-print_rev.c  5-rev_string.c  6-puts2.c  7-puts_half.c  8-print_array.c  9-strcpy.c
0x06-pointers_arrays_strings/: #0-strcat.c#  0-strcat.c  0-strcat.c#  1-strncat.c  102-magic.c  104-print_buffer.c  2-strncpy.c  5-string_toupper.c  6-cap_string.c  README.md
0x07-pointers_arrays_strings/: README.md
0x08-recursion/: main.cpp
0x0A-argc_argv/: 1-args.c
0x0B-malloc_free/: 4-free_grid.c
0x0F-function_pointers/: README.md
0x10-variadic_functions/: README.md
0x12-singly_linked_lists/: README.md
0x14-bit_manipulation/: README.md
0x15-file_io/: README.md
0x18-dynamic_libraries/: 1-create_dynamic_lib.sh
